Bug 3885 - RaceBoardPanel content layout is broken in AutoPlay.html

--- a/java/com.sap.sailing.gwt.ui/LeaderboardNewHome.css
+++ b/java/com.sap.sailing.gwt.ui/LeaderboardNewHome.css
@@ -5,9 +5,7 @@ table {
 }
 
 .leaderboardContent td, .leaderboardContent th {
-	vertical-align: bottom;
 	line-height: 1.3;
-	padding-top: 2px;
 }
 
 .leaderboardContent-toolbar {
